//
// Amelia II - User visible changes
//
//
//

== 1.7.6 (24 Nov 2019) ==
  * Added "x.las" and "gap.xaxis" arguments to missmap() to allow for more
  control over the axis.
  * added xlim/ylim arguments to disperse()
  * moved documentation to roxygen
  * Minor bug fixes

== 1.7.5 (07 May 2018) ==
  * Fixed bug with factor names under perfect collinearity
  * Added "draws" argument to overimp to control number of overimputation draws
  * Fix issue with tibbles and tscsPlot()
  * Fix issues with missmap()
  * Fixed issue with iterHist indicators being reversed

== 1.7.4 (21 Nov 2015) ==
   * Fixed issue with log axes in overimpute
   * Allow for vector in 'main' argument in tscsPlot()
   * Moved a collinearity check from error to warning.
   * Handle subsets better in moPrep()
   * tscsPlot() won't throw an error when cs is unspecified and plotall=TRUE
   * Fixed other small bugs and issues
   
== 1.7.3 (14 Nov 2014) ==
   * Fixed bug with overimp not being respected
   * Added an argument boot.type='none' to amelia() to allow it to run on the original, non-bootstrapped data
   * Fixed bug in plot.amelia() with matrix inputs
   * Fixed bug with lower bounds not being respected
   * Made compatible with most recent versions of Rcpp and RcppArmadillo

== 1.7.2 (08 Jun 2013) == 
   * Bug fixes to priors (especially important for multiple overimputation).
   * Fixed issue with names of imputations for integration with Zelig.

== 1.7.1 (24 Mar 2013) == 
   * Speed improvement (thanks to Paul Johnson).
   * Amelia now requires R>=2.13.5
   * missmap() now displays correctly when data is completely observed. 
   * An error is now called when users try to use overimpute() on a variable marked as nominal. 
   * Fixed a bug when all imputations resulted in uninvertible covariance matrices. 
   * Fixed a bug where incorrectly setting the emburn argument could cause a segfault. 
   * Various package cleanups for CRAN compatibility.

== 1.7 (10 Feb 2013) ==